[tool.poetry]
name = "<xyz>"
version = "0.1.0"
description = ""
authors = ["harsh8398 <pharsh58@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.950"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xyz = "<xyz>.main:main"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
src_paths = ["<xyz>", "tests"]

[tool.mypy]
python_version = "3.9"